--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,7 @@
 - Send up a texture array (3D texture) for sprites, with ids.
 - Sound
 - Asset system for handling textures and sprite data
+- Debug utility for drawing text and manipulating values, "on the fly"
 
 Renderer, update buffers every frame:
     Primitives: lines, points, and quads
